--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Git</h1>
-	<p>Норроыа</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio quaerat, iure animi laboriosam voluptas nam earum incidunt et? Voluptates accusantium facilis totam tempora repellat hic inventore repudiandae voluptas accusamus laboriosam!</p>
 </body>
 </html>
